<resources>
    <string name="app_name">Gepäck-Planer</string>

    <string name="label_category">Kategorie</string>
    <string name="label_categories">Kategorien</string>
    <string name="label_luggage_list">Gepäckstücke</string>
    <string name="label_packing_list">Packliste</string>
    <string name="label_packing_lists">Packlisten</string>
    <string name="label_options">Einstellungen</string>

    <string name="label_weight">Gewicht</string>
    <string name="label_date">Datum</string>
    <string name="label_luggage_name">Gepäckstück Name</string>
    <string name="label_packing_list_name">Packliste Name</string>
    <string name="label_delete">Löschen</string>
    <string name="label_attention">Achtung</string>
    <string name="label_usage">Bedienung</string>
    <string name="label_sync">Synchronisieren</string>

    <string name="title_category_edit">Kategory bearbeiten</string>
    <string name="title_category_new">Kategory anlegen</string>
    <string name="title_luggage_edit">Gepäckstück bearbeiten</string>
    <string name="title_luggage_new">Gepäckstück anlegen</string>
    <string name="title_packing_list_edit">Packliste bearbeiten</string>
    <string name="title_packing_list_new">Packliste anlegen</string>
    <string name="title_options">Einstellungen</string>
    <string name="title_usage">Bedienung</string>
    <string name="title_error">Fehler!</string>
    <string name="title_warning">Achtung!</string>
    <string name="title_information">Information!</string>
    <string name="title_main_page">Hauptseite</string>
    <string name="title_exit_application">Anwendung schließen</string>
    <string name="title_pairing_dialog">zu Gerät verbinden:</string>

    <string name="text_yes">Ja</string>
    <string name="text_ok">Ja</string>
    <string name="text_of">von</string>
    <string name="text_close">Schließen</string>
    <string name="text_understood">Verstanden</string>
    <string name="text_no">Nein</string>
    <string name="text_cancel">Abbrechen</string>
    <string name="text_save">Speichern</string>
    <string name="text_for">für</string>
    <string name="text_update">Aktualisieren</string>
    <string name="text_count">Anzahl</string>
    <string name="text_reset_database">Datenbank leeren</string>
    <string name="text_sync_database">Datenbank synchronisieren</string>
    <string name="text_export_database">Datenbank exportieren</string>
    <string name="text_import_database">Datenbank importieren</string>
    <string name="text_create_database">Demo Datenbank erstellen</string>
    <string name="text_please_select">Bitte wählen</string>
    <string name="text_warning_exit_app">Sind sie sicher, dass sie das Programm verlassen möchten?</string>
    <string name="text_choose_category">Bitte wählen Sie eine Kategorie aus!</string>
    <string name="text_create_category">Bitte legen Sie eine zu erst Kategorie an!</string>
    <string name="text_create_luggage_for_category">Bitte legen sie erst ein Gepäckstück für diese Kategorie an!</string>
    <string name="text_not_all_fields_filled">Es sind nicht alle notwendigen Felder ausgefüllt!</string>
    <string name="text_exit">Verlassen</string>
    <string name="text_luggage_already_exists_in_packing_list">Dieses Gepäckstück existiert bereits in ihrer Packliste! Bitte bearbeiten sie die Anzahl dieses Eintrages, wenn sie mehr dieser Gepäckstücke planen!</string>
    <string name="text_warning_reset_database">Wenn Sie diese Aktion auführen, werden sämtliche Daten in der Datenbank gelöscht!</string>
    <string name="text_data_successfully_saved">Die Daten wurden erfolgreich gespeichert!</string>
    <string name="text_size">Größe</string>
    <string name="text_font_size">Schriftgröße</string>
    <string name="text_database">Datenbank</string>
    <string name="text_category_info">Das ist die Kategory mit dem Namen \"%1$s\".</string>
    <string name="text_luggage_information">Das ist das Gepäckstück mit dem Namen \"%1$s\". Es befindet sich in der Kategory \"%2$s\" und hat ein Gewicht von %3$,.0f g.</string>
    <string name="text_packing_list_entry_entity_information">Das Gepäckstück \"%1$s\" befindet sich %2$dx in der Liste \"%3$s\" und hat damit eine Gesamtgewichtsbelastung von %4$,.0f g.</string>
    <string name="text_usage_general"><![CDATA[Allgemeines:<br />
<br />
Für das Anlegen einer Packliste ist ein Packstück notwendig, welches in einer Kategorie abgelegt ist.<br />
<br />
Daher ist es wichtig, eine Kategorie angelegt zu haben, in der sich ein Gepäckstück befindet um eine Packliste anlegen zu können.<br />
<br />
Folgende Reihenfolge ist daher einzuhalten:<br />
<br />
<ul>
<li>
Kategorie anlegen
</li>
<li>
Packstücke in Kategorie hinterlegen
</li>
<li>
Packliste mit Packstücken aus den jeweiligen Kategorien anlegen
</li>
</ul>
]]></string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="weight">Gewicht</string>

    <string name="placeholder_concat_packing_list_name">%1$s für %2$s</string>
    <string name="placeholder_luggage_of_packing_list">%1$s von %2$s</string>
    <string name="placeholder_delete_constraints_reason">Gepäckstück \"%1$s\" kann nicht gelöscht werden, da es noch verwendet wird!</string>
    <string name="placeholder_entry_should_be_deleted">\"%1$s\" soll gelöscht werden!</string>
    <string name="placeholder_delete_category_constraints_reason">Kategorie \"%1$s\" konnte nicht gelöscht werden, da es noch verwendet wird!</string>
    <string name="placeholder_delete_packing_list_constraints_reason">Packliste \"%1$s\" \(%2$s\) konnte nicht gelöscht werden, da sie noch verwendet wird!</string>

    <string name="description_click_to_add_luggage">Klicken, um ein neues Gepäckstück hinzuzufügen</string>
    <string name="description_click_to_add_packing_list">Klicken, um eine neue Packliste hinzuzufügen</string>
    <string name="description_click_to_add_category">Klicken, um eine neue Kategory hinzuzufügen</string>

    <string name="warning_packing_list_empty">Diese Packliste enthält noch keine Einträge!</string>
    <string name="warning_luggage_list_empty">Es sind noch keine Gepäckstücke vorhanden!</string>
    <string name="warning_delete_failed">Löschen fehlgeschlagen!</string>
    <string name="warning_luggage_still_in_use">Dieses Gepäckstück wird noch in Packlisten verwendet!</string>
    <string name="warning_no_packing_list_found">Es wurde keine Packliste Gefunden! Bitte legen sie eine an.</string>

    <string name="error_category_already_exists">Kategorie \"%1$s\" existiert bereits!</string>
    <string name="error_luggage_already_exists">Gepäckstück \"%1$s\" existiert bereits in Kategorie \"%2$s\"!</string>
    <string name="error_saving">Beim Speichern ist ein Fehler aufgetreten!</string>
    <string name="error_encoding_import_file">Format der Datei konnte nicht gelesen werden!</string>
    <string name="error_import_file">Datei konnte nicht gelesen werden!</string>
    <string name="error_create_tables">Tabelle konnte nicht angelegt werden!</string>
    <string name="error_convert_data">Beim umwandeln trat ein Fehler auf!</string>

    <string name="category1">Badesachen</string>
    <string name="luggage1_category1">Badehose</string>
    <string name="luggage2_category1">Badelatschen</string>

    <string name="category2">Outdoor</string>
    <string name="luggage1_category2">Zelt</string>
    <string name="luggage2_category2">Grill</string>
    <string name="luggage3_category2">Kanu</string>

    <string name="category3">Hygiene</string>
    <string name="luggage1_category3">Zahnbürste</string>
    <string name="luggage2_category3">Handtuch (groß)</string>
    <string name="luggage3_category3">Handtuch (klein)</string>

    <string name="packing_list1">Urlaub Spreewald</string>
    <string name="packing_list2">Urlaub Ostsee</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">Es besteht keine Verbindung zu einem Gerät.</string>
    <string name="bt_not_enabled_leaving">Bluetooth ist nicht aktiviert, beende.</string>
    <string name="title_connecting">Verbinde…</string>
    <string name="title_connected_to">Verbunden mit: </string>
    <string name="title_not_connected">Nicht verbunden</string>
    <!--  DeviceListActivity -->
    <string name="scanning">Suche nach Geräten…</string>
    <string name="select_device">Gerät zum Verbinden auswählen</string>
    <string name="none_paired">Mit keinem Gerät verbunden</string>
    <string name="none_found">Kein Gerät gefunden</string>
    <string name="title_paired_devices">Verbundene Geräte</string>
    <string name="title_other_devices">Weitere verfügbare Geräte</string>
    <string name="button_scan">Nach Geräten suchen</string>
    <!-- Options Menu -->
    <string name="connect">Verbinde zu einem Gerät</string>
    <string name="discoverable">Gerät sichtbar machen</string>

    <string name="hint_chat_input">Nachricht hier eingeben…</string>

</resources>
